--- a/poc/test_PlusMinusForm/test_PlusMinusForm.html
+++ b/poc/test_PlusMinusForm/test_PlusMinusForm.html
@@ -18,11 +18,13 @@
             <div class="mid">
                 mid
                 <input type="text">
-                <input type="checkbox">
             </div>
             <div class="r">
                 r
                 <input type="text">
+            </div>
+            <div class="auto">
+                auto
                 <input type="checkbox">
             </div>
         </div>
